fixed issue with dropdowns in navbars z-index

--- a/src/dropdown/dropdown.scss
+++ b/src/dropdown/dropdown.scss
@@ -32,7 +32,7 @@
   top: 100%;
   list-style: none;
   text-align: left;
-  z-index: 1000;
+  z-index: 2000;
 
   .open & {
     display: block;
